Codificacion de etiquetas en las caracteristicas Gender y CLASS

--- a/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
+++ b/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 126,
    "id": "e2f7e983-46ce-4a2a-9057-3db48eb38160",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "9  24.0     N  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "id": "99033ae6-2873-4c0f-b2d9-81682fc594e9",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 103,
    "id": "cf489594-7f48-48b8-a9f4-46705ba8481a",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
        "max      35.000000    47.750000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,178 +555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 109,
    "id": "7e7060ae-a6cc-4cdd-8071-e8955daebe61",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>No_Pation</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>Urea</th>\n",
-       "      <th>Cr</th>\n",
-       "      <th>HbA1c</th>\n",
-       "      <th>Chol</th>\n",
-       "      <th>TG</th>\n",
-       "      <th>HDL</th>\n",
-       "      <th>LDL</th>\n",
-       "      <th>VLDL</th>\n",
-       "      <th>BMI</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CLASS</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>N</th>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>N</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>P</th>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Y</th>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Y</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        ID  No_Pation  Gender  AGE  Urea   Cr  HbA1c  Chol   TG  HDL  LDL  \\\n",
-       "CLASS                                                                       \n",
-       "N      102        102     102  102   102  102    102   102  102  102  102   \n",
-       "N        1          1       1    1     1    1      1     1    1    1    1   \n",
-       "P       53         53      53   53    53   53     53    53   53   53   53   \n",
-       "Y      840        840     840  840   840  840    840   840  840  840  840   \n",
-       "Y        4          4       4    4     4    4      4     4    4    4    4   \n",
-       "\n",
-       "       VLDL  BMI  \n",
-       "CLASS             \n",
-       "N       102  102  \n",
-       "N         1    1  \n",
-       "P        53   53  \n",
-       "Y       840  840  \n",
-       "Y         4    4  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby(['CLASS']).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "66f008d7-faea-45b7-97fe-8beac97531a3",
    "metadata": {},
    "outputs": [
     {
@@ -749,13 +579,120 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\" identificar datos faltantes \"\"\"\n",
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "158016e2-55a8-4b18-9f73-261ee6ac39e2",
+   "metadata": {},
+   "source": [
+    "#### 2.1 Codificacion de etiquetas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "66f008d7-faea-45b7-97fe-8beac97531a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" encontrar valores unicos de las caracteristicas \"\"\"\n",
+    "def valores_unicos_etiquetas(columna1, columna2):\n",
+    "    return display(df[columna1].unique(),df[columna2].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "4954545e-9b89-4470-a57e-a36e740b8bfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['F', 'M', 'f'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['N', 'N ', 'P', 'Y', 'Y '], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\"\"\" etiquetas de la columna [Gender] y [CLASS] \"\"\"\n",
+    "valores_unicos_etiquetas('Gender','CLASS')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "167ec957-dead-4d8f-9cf9-c1847ed3ea98",
+   "metadata": {},
+   "source": [
+    "**Nota**: En la columna Gender se identifican tres tipos de etiquetas. En cambio, en la columna CLASS existen cinco tipos de etiquetas de las cuales cuatro ('N','N ','Y','Y ') son similares visualmente, pero diferentes en su composición debido a el espacio que existe en la comilla simple. La desicion que se toma es hacer que esas cuatro etiquetas se fusionen en dos etiquetas ('N' y 'Y') para evitar un posible mal rendimiento del modelo y para no generar predicciones o resultados que pueden ser inexistentes. Este cambio se debe a que pudieron haber existido errores en la manipulacion de los datos o desde la introduccion de los mismos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "d522bf8e-d0cf-4abd-98f0-37bf7f9f1520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"CAMBIAR ETIQUETAS \"\"\"\n",
+    "\n",
+    "\"\"\" [Gender] \"\"\"\n",
+    "dicc_gender = {'F': 0, 'M':1, 'f':2}\n",
+    "df['Gender'] =df['Gender'].map(dicc_gender)\n",
+    "\n",
+    "\"\"\"[CLASS] => 'N' y 'N ' = 1,  P=2, 'Y' y 'Y '= 3 \"\"\"\n",
+    "dicc_class = {'N':1, 'N ':1, 'P':2, 'Y':3, 'Y ':3}\n",
+    "df['CLASS'] =df['CLASS'].map(dicc_class)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "0c5cdf7a-9394-40ef-835e-bdd1d0e2ea3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\"\"\" comprobar cambio de etiquetas \"\"\"\n",
+    "valores_unicos_etiquetas('Gender','CLASS')"
    ]
   }
  ],
