Codificacion de etiquetas 2, eliminando espacios en blanco con strip y transformando a mayusculas

--- a/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
+++ b/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 154,
    "id": "e2f7e983-46ce-4a2a-9057-3db48eb38160",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "9  24.0     N  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 155,
    "id": "66f008d7-faea-45b7-97fe-8beac97531a3",
    "metadata": {},
    "outputs": [],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 156,
    "id": "4954545e-9b89-4470-a57e-a36e740b8bfb",
    "metadata": {},
    "outputs": [
@@ -644,37 +644,51 @@
    "id": "167ec957-dead-4d8f-9cf9-c1847ed3ea98",
    "metadata": {},
    "source": [
-    "**Nota**: En la columna Gender se identifican tres tipos de etiquetas. En cambio, en la columna CLASS existen cinco tipos de etiquetas de las cuales cuatro ('N','N ','Y','Y ') son similares visualmente, pero diferentes en su composición debido a el espacio que existe en la comilla simple. La desicion que se toma es hacer que esas cuatro etiquetas se fusionen en dos etiquetas ('N' y 'Y') para evitar un posible mal rendimiento del modelo y para no generar predicciones o resultados que pueden ser inexistentes. Este cambio se debe a que pudieron haber existido errores en la manipulacion de los datos o desde la introduccion de los mismos."
+    "**Nota**: En la columna Gender se identifican tres tipos de etiquetas ('F','M','f'). En cambio, en la columna CLASS existen cinco tipos de etiquetas de las cuales cuatro ('N','N ','Y','Y ') son similares visualmente, pero diferentes en su composición debido a el espacio que existe en la comilla simple. La desicion que se toma es la siguiente: <br>\n",
+    "* Para el primer caso, se transforma todas las etiquetas a mayusculas. \n",
+    "* Para el segundo caso, se elimina los espacios en blanco, haciendo que esas cuatro etiquetas se fusionen en dos('N' y 'Y').\n",
+    "\n",
+    "Se ha decidido aplicar estas tecnicas para evitar un posible mal rendimiento del modelo o para no generar predicciones y resultados que pueden ser inexistentes. Debido a que este cambio pudieron haber sido causados por errores en la manipulacion de los datos o desde la introduccion de los mismos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 157,
+   "id": "7a28ef11-a870-46ff-b6dd-d1a7e6b99ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  ELIMINAR ESPACIOS EN BLANCO con el uso del metodo strip() \"\"\"\n",
+    "df['CLASS'] = df['CLASS'].apply(lambda x: x.strip())\n",
+    "\n",
+    "\"\"\" CAMBIAR ETIQUETAS A MAYUSCULAS con el metodo upper() \"\"\"\n",
+    "df['Gender'] = df['Gender'].apply(lambda x: x.upper() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "id": "d522bf8e-d0cf-4abd-98f0-37bf7f9f1520",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"CAMBIAR ETIQUETAS \"\"\"\n",
-    "\n",
-    "\"\"\" [Gender] \"\"\"\n",
-    "dicc_gender = {'F': 0, 'M':1, 'f':2}\n",
+    "\"\"\"CODIFICAR ETIQUETAS \"\"\"\n",
+    "dicc_gender = {'F': 0, 'M':1}\n",
     "df['Gender'] =df['Gender'].map(dicc_gender)\n",
-    "\n",
-    "\"\"\"[CLASS] => 'N' y 'N ' = 1,  P=2, 'Y' y 'Y '= 3 \"\"\"\n",
-    "dicc_class = {'N':1, 'N ':1, 'P':2, 'Y':3, 'Y ':3}\n",
+    "dicc_class = {'N':1, 'P':2, 'Y':3}\n",
     "df['CLASS'] =df['CLASS'].map(dicc_class)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 159,
    "id": "0c5cdf7a-9394-40ef-835e-bdd1d0e2ea3a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2], dtype=int64)"
+       "array([0, 1], dtype=int64)"
       ]
      },
      "metadata": {},
@@ -691,9 +705,17 @@
     }
    ],
    "source": [
-    "\"\"\" comprobar cambio de etiquetas \"\"\"\n",
+    "\"\"\" comprobar valor de las etiquetas \"\"\"\n",
     "valores_unicos_etiquetas('Gender','CLASS')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a0bb7f0-2d66-4ee6-b475-17c9e0651000",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
