Cambio de tipo de dato en columnas codificadas

--- a/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
+++ b/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
@@ -710,12 +710,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9498797-20d7-42c7-b71f-71eef332340c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### 2.2 Cambiar tipo de dato"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0bb7f0-2d66-4ee6-b475-17c9e0651000",
+   "id": "c1f33151-f23b-4be7-9a9b-dd79fae01c3f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\" funcion para cambiar tipo de dato de columnas codificadas de object => category \"\"\"\n",
+    "def cambiar_tipodato_imputacion(df,columnas, tipodato_futuro):\n",
+    "    for i in columnas:\n",
+    "        df[i]= df[i].astype(tipodato_futuro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "147fa04d-4598-41e8-af7c-2f980f5ec3e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" columnas a cambiar tipo de dato numerico\"\"\"\n",
+    "columnas=['Gender','CLASS']\n",
+    "cambiar_tipodato_imputacion(df,columnas, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "3ed82684-9c07-4e93-b584-cc91156814f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   ID         1000 non-null   int64  \n",
+      " 1   No_Pation  1000 non-null   int64  \n",
+      " 2   Gender     1000 non-null   int32  \n",
+      " 3   AGE        1000 non-null   int64  \n",
+      " 4   Urea       1000 non-null   float64\n",
+      " 5   Cr         1000 non-null   int64  \n",
+      " 6   HbA1c      1000 non-null   float64\n",
+      " 7   Chol       1000 non-null   float64\n",
+      " 8   TG         1000 non-null   float64\n",
+      " 9   HDL        1000 non-null   float64\n",
+      " 10  LDL        1000 non-null   float64\n",
+      " 11  VLDL       1000 non-null   float64\n",
+      " 12  BMI        1000 non-null   float64\n",
+      " 13  CLASS      1000 non-null   int32  \n",
+      "dtypes: float64(8), int32(2), int64(4)\n",
+      "memory usage: 101.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" comprobar tipo de dato \"\"\"\n",
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
