--- a/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
+++ b/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
@@ -12,14 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "28ab2ff6-52bb-40db-819f-f50356387bbc",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\" Librerias \"\"\"\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "\n",
+    "\"\"\" division de los datos \"\"\"\n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "id": "e2f7e983-46ce-4a2a-9057-3db48eb38160",
    "metadata": {},
    "outputs": [
@@ -274,7 +277,7 @@
        "9  24.0     N  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "id": "7e7060ae-a6cc-4cdd-8071-e8955daebe61",
    "metadata": {},
    "outputs": [
@@ -579,7 +582,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 6,
    "id": "66f008d7-faea-45b7-97fe-8beac97531a3",
    "metadata": {},
    "outputs": [],
@@ -611,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 7,
    "id": "4954545e-9b89-4470-a57e-a36e740b8bfb",
    "metadata": {},
    "outputs": [
@@ -653,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 8,
    "id": "7a28ef11-a870-46ff-b6dd-d1a7e6b99ce1",
    "metadata": {},
    "outputs": [],
@@ -667,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "id": "d522bf8e-d0cf-4abd-98f0-37bf7f9f1520",
    "metadata": {},
    "outputs": [],
@@ -681,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "id": "0c5cdf7a-9394-40ef-835e-bdd1d0e2ea3a",
    "metadata": {},
    "outputs": [
@@ -721,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c1f33151-f23b-4be7-9a9b-dd79fae01c3f",
    "metadata": {},
    "outputs": [],
@@ -734,19 +737,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "147fa04d-4598-41e8-af7c-2f980f5ec3e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\" columnas a cambiar tipo de dato numerico\"\"\"\n",
     "columnas=['Gender','CLASS']\n",
-    "cambiar_tipodato_imputacion(df,columnas, )"
+    "cambiar_tipodato_imputacion(df,columnas, \"category\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 13,
    "id": "3ed82684-9c07-4e93-b584-cc91156814f0",
    "metadata": {},
    "outputs": [
@@ -757,24 +760,24 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1000 entries, 0 to 999\n",
       "Data columns (total 14 columns):\n",
-      " #   Column     Non-Null Count  Dtype  \n",
-      "---  ------     --------------  -----  \n",
-      " 0   ID         1000 non-null   int64  \n",
-      " 1   No_Pation  1000 non-null   int64  \n",
-      " 2   Gender     1000 non-null   int32  \n",
-      " 3   AGE        1000 non-null   int64  \n",
-      " 4   Urea       1000 non-null   float64\n",
-      " 5   Cr         1000 non-null   int64  \n",
-      " 6   HbA1c      1000 non-null   float64\n",
-      " 7   Chol       1000 non-null   float64\n",
-      " 8   TG         1000 non-null   float64\n",
-      " 9   HDL        1000 non-null   float64\n",
-      " 10  LDL        1000 non-null   float64\n",
-      " 11  VLDL       1000 non-null   float64\n",
-      " 12  BMI        1000 non-null   float64\n",
-      " 13  CLASS      1000 non-null   int32  \n",
-      "dtypes: float64(8), int32(2), int64(4)\n",
-      "memory usage: 101.7 KB\n"
+      " #   Column     Non-Null Count  Dtype   \n",
+      "---  ------     --------------  -----   \n",
+      " 0   ID         1000 non-null   int64   \n",
+      " 1   No_Pation  1000 non-null   int64   \n",
+      " 2   Gender     1000 non-null   category\n",
+      " 3   AGE        1000 non-null   int64   \n",
+      " 4   Urea       1000 non-null   float64 \n",
+      " 5   Cr         1000 non-null   int64   \n",
+      " 6   HbA1c      1000 non-null   float64 \n",
+      " 7   Chol       1000 non-null   float64 \n",
+      " 8   TG         1000 non-null   float64 \n",
+      " 9   HDL        1000 non-null   float64 \n",
+      " 10  LDL        1000 non-null   float64 \n",
+      " 11  VLDL       1000 non-null   float64 \n",
+      " 12  BMI        1000 non-null   float64 \n",
+      " 13  CLASS      1000 non-null   category\n",
+      "dtypes: category(2), float64(8), int64(4)\n",
+      "memory usage: 96.1 KB\n"
      ]
     }
    ],
@@ -782,6 +785,60 @@
     "\"\"\" comprobar tipo de dato \"\"\"\n",
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad03ba2c-07cf-4589-bcac-10e6f22cc93e",
+   "metadata": {},
+   "source": [
+    "## 3. Matriz de caracteristicas, variable objetivo y division del dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "79fc4b48-f0d2-4bf2-a777-a4aa5fec8b76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" lista de caracteristicas \"\"\"\n",
+    "caracteristicas_x = ['Gender','AGE','Cr','HbA1c','Chol','TG','HDL','LDL','VLDL','BMI']\n",
+    "\n",
+    "\"\"\" variable independiente/matriz de caracteristicas \"\"\"\n",
+    "X = df[caracteristicas_x]\n",
+    "\n",
+    "\"\"\" varaible dependiente/objetivo/etiqueta \"\"\"\n",
+    "y = df['CLASS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cbbd9242-8fdf-41d9-a2a5-5a16232feaa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" division de los datos en entrenamiento y prueba \"\"\"\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03d87abc-dcb3-4043-9fca-13f69fcd23e2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 4. Modelo de Clasificacion por Arbol de Decision "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e973423-0859-48f4-a8c1-2d6801d7c17e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
