update last load

--- a/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
+++ b/[NRC_6262]_MiguelCastillo_Lab1Unidad2.ipynb
@@ -1225,7 +1225,7 @@
    "source": [
     "**Intepretacion de la matriz y metricas**:<br>\n",
     "El accuracy del modelo entrenado alcanza un 97%, lo cual quiere decir que la precision de clasificacion es bastante aceptable para determinar si los pacientes tienen, son probables o no tienen diabetes. Ahora para encontrar las otras metricas se ha usado el parametro *average* con dos combinaciones: micropromedio y macropromedio. Esto debido a que no se tiene una salida si no multiclase. <br>\n",
-    "Con micropromedio todas las metricas tienen valor, lo cual quiere decir, que las muestras con las etiquetas multiclase si fueron detectadas casi completamente como positivos. En cambio, con macropromedio se observa que los valores de las metricas precision, recall, y F1 Score se reducieron, porque promedia la suma de cada etiqueta de salida."
+    "Con micropromedio todas las metricas tienen valor, lo cual quiere decir, que las muestras con las etiquetas multiclase si fueron detectadas casi completamente como positivos. En cambio, con macropromedio se observa que los valores de las metricas precision, recall, y F1 Score se reducieron, porque promedia la suma de cada metrica en la etiqueta de salida."
    ]
   },
   {
